...
                                <include reference="C4g-nz-BHQ"/>
                                <include reference="h2S-01-wRC"/>
                                <include reference="hhL-sm-e6M"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Rechercher" id="uH0-fF-9iW">
                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="3r8-JF-gP8">
                            <connections>
                                <action selector="dismissController:" destination="SvV-J0-Yn1" id="iQx-mI-3Fz"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                <include reference="LFr-zb-0EP"/>
                                <include reference="bXa-Rc-NLG"/>
                                <exclude reference="eSH-5f-Aqp"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="BookMe5" id="6DC-RV-no6">
                        <barButtonItem key="rightBarButtonItem" image="search" id="tUr-XK-1EC">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <segue destination="ba9-J5-xRj" kind="presentation" id="x1Z-30-FsO"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
