...
    private let viewModel = SearchViewModel()
    private var isSearching = false
    private var transition: ZFModalTransitionAnimator!
    private var hakuba: Hakuba!
    
    private let categories = [
        SearchCategoriesViewModel(category: "Restaurant"),
        SearchCategoriesViewModel(category: "Hôtel"),
        SearchCategoriesViewModel(category: "Salon de coiffure")
    ]
    
    @IBOutlet weak var tableView: UITableView!
    @IBOutlet weak var searchBar: UISearchBar!
...
